# product-information-management

./: .gitignore  README.md  TASK.md  package.json
.clinerules/: CLAUDE.md
PRPs/: task1-project-setup.md  task1.5-frontend-environment-validation-completion.md  task1.5-frontend-environment-validation-review.md  task1.5-frontend-environment-validation.md  task2-mvp-database-design-supabase-completion.md  task2-mvp-database-design-supabase-review.md  task2-mvp-database-design-supabase.md  task3-enhanced-invoice-parser-s3-supplier-detection-completion.md  task3-enhanced-invoice-parser-s3-supplier-detection-review.md  task3-enhanced-invoice-parser-s3-supplier-detection.md  task3.1-migration-system-fix-tracking-completion.md  task3.1-migration-system-fix-tracking.md  (+15 more)
backend/: .env.example  README.md  conftest.py  debug_lawnfawn_html.py  debug_lawnfawn_raw.html  pyproject.toml  pytest.ini  requirements.txt  run_migrations.py  test_connectivity.py
backend/app/: __init__.py  main.py
backend/app/api/: enrichment.py  upload.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  migration_manager.py
backend/app/exceptions/: enrichment.py
backend/app/models/: __init__.py  base.py  deduplication.py  enrichment.py  image.py  invoice.py  product.py  supplier.py  upload_batch.py
backend/app/parsers/: __init__.py  base.py  lawnfawn.py
backend/app/services/: __init__.py  conflict_detector.py  database_service.py  deduplication_service.py  firecrawl_client.py  invoice_processor.py  lawnfawn_matcher.py  pdf_parser.py  product_enrichment.py  s3_manager.py  supplier_detector.py
backend/app/utils/: __init__.py  database_utils.py  migration_utils.py
backend/migrations/: 000_migration_tracking.sql  001_initial_schema.sql  002_seed_data.sql  003_invoice_processing_fields.sql  005_invoice_management_indexes.sql  006_product_deduplication_system.sql  007_product_enrichment_system.sql
backend/scripts/: README.md  debug_parser.py  firecrawl_api_discovery.py  firecrawl_discovery_results.json  generate_download_link.py  simple_download_test.py
backend/tests/: __init__.py  test_config.py
backend/tests/connectivity/: __init__.py  test_firecrawl_connectivity.py  test_s3_connectivity.py  test_supabase_connectivity.py
backend/tests/integration/: __init__.py  test_api_workflow.py  test_end_to_end_invoice.py  test_enrichment_workflow.py  test_enrichment_workflow_real.py  test_invoice_download_system.py
backend/tests/unit/: test_config.py  test_database.py  test_deduplication_cleanup.py  test_deduplication_logic.py  test_firecrawl_client.py  test_invoice_management_api_fixed.py  test_lawnfawn_matcher.py  test_main.py  test_migration_system.py  test_migration_tracking.py  test_product_deduplication.py  test_product_enrichment.py  test_s3_presigned_urls.py
(+48 files in other folders)
